http://sourceforge.net/tracker/?group_id=86862

Version 0.7.6.0, 2008-
---------------
+ ID3v2 cover reading
+ Id3v2.2 (yes, it is old...) support
+ Id3v2: TXXX tags support
+ RMP3 (japanese MP3 based format?) support
+ SAMR in .mp4: some files have wrong sampling rate, forcing it to 8000 Hz
+ File_Created_Date and File_Modified_Date tags added (in advanced mode only)
x AVC Display Aspect Ratio was not well detected if AVC is in a .mp4 container
x Matroska Display Aspect Ratio was deleted if AVC aspect ratio was set, now Matroska has priority
x "Subwoofer" term has been replaced by "LFE", more relevant

Version 0.7.5.9, 2008-02-08
---------------
+ AVC: CABAC detection
+ #1886241: AVC: all SEI userdata infos from x264/eavc in Writing library settings
+ ADPCM: compagny which created the stream is now shown in the codec section
+ PCM: precision about Little/Big endianess, Integer/Floating point method
+ #1882691: AC3+: raw files are now detected
x AVC: FPS were sometimes 2x the reality
x RealMedia parser was brocken
x FLV parser was crashing
x FLV: Better detection of Nellymoser audio
x FLV: Disabling Framerate estimation if a VFR file is detected (estimation was false in this case)
x Better false-positive MP3 detection (NSV files are no more detected as MP3)
x IFO: there was a mistake betwwen NTSC and PAL framerates
x Win9X support was (again) brocken in 0.7.5.8

Version 0.7.5.8, 2008-02-01
---------------
+ Matroska: Full parsing of DivX/XviD/H264/AVC settings (profile...)
+ AVI: Full parsing of AVC settings (profile...)
+ AVI: Added a tag "OpenDML" (for example, the PlayStation 3 doesn't support OpenDML files)
+ AVC: Framerate, Interlacement, writing library (only for eavc, x264 and MainConcept encoders)
+ TwinVQ : channels, bitrate and sampling rate
+ Musepack SV8 support
+ Musepack and Musepack SV8: tags support
+ AIFF and AIFC format support
+ MIDI format detection
+ FLV: FrameRate even if the tag is not in the header
+ AU/SND audio formats support